--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-typescript": "^11.1.2",
     "rollup": "^3.27.0",
+    "tslib": "^2.8.1",
     "typescript": "^5.1.6",
     "wrangler": "^3.15.0"
   },
